-Task.restriction added but not working as expected. need some clarification on this

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -2189,6 +2189,7 @@
             "setPractitionerDetails": true,
             "setOrganizationDetails": true,
             "type": "EDIT",
+            "taskId": "@{taskId}",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "9fac39bd-9750-4c1d-b355-1961de4e37f3"
@@ -2217,6 +2218,7 @@
             "id": "3276f55c-b25e-455b-ae4e-8846fb8fd039",
             "title": "Record sick child",
             "resourceIdentifier": "@{patientId}",
+            "taskId": "@{taskId}",
             "planDefinitions": [
               "4ac4f9d6-6fc7-45bf-9a29-398798fc3134"
             ]
@@ -2600,6 +2602,7 @@
           "questionnaire": {
             "id": "58fbddae-c5a0-4b86-832e-f516c96f3b85",
             "title": "Record sick child",
+            "taskId": "@{taskId}",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "4ac4f9d6-6fc7-45bf-9a29-398798fc3134"
@@ -2628,6 +2631,7 @@
             "id": "9b22f3ed-e7e1-4222-bf72-1ced42696189",
             "title": "Record to ANC",
             "resourceIdentifier": "@{patientId}",
+            "taskId": "@{taskId}",
             "planDefinitions": [
               "a881d53a-590c-4d52-ae0f-c87b7ff04148"
             ],
@@ -2654,6 +2658,7 @@
           "questionnaire": {
             "id": "405619ff-cde8-4379-b674-0a4735098b33",
             "title": "Pregnancy outcome",
+            "taskId": "@{taskId}",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "07200c16-b2d6-4d7d-a53f-128115b0ab2f"
@@ -2723,6 +2728,7 @@
           "questionnaire": {
             "id": "4acc8776-32b0-4440-a1b1-a11a12d79acb",
             "title": "Enroll to family planning",
+            "taskId": "@{taskId}",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "d6263f2d-2ebe-456c-bbb7-786dabd3ea22",
@@ -2856,6 +2862,7 @@
           "questionnaire": {
             "id": "f7004382-ba3d-4f62-a687-6e9d18c09d3a",
             "resourceIdentifier": "@{patientId}",
+            "taskId": "@{taskId}",
             "title": "Diseases Registration Form",
             "planDefinitions": [
               "55d89227-3a06-4a9a-b526-2819dcb1d301",
@@ -2925,6 +2932,7 @@
             "id": "7f1960ac-81b5-42a2-8813-97222de5745a",
             "resourceIdentifier": "@{patientId}",
             "title": "Remove family member",
+            "taskId": "@{taskId}",
             "saveButtonText": "Update registration",
             "params": [
               {
