Update Configuration Signed Release APK 🔧

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,6 +33,12 @@ jobs:
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
     steps:
+
+    - name: Decode & Generate Keystore file
+      run: echo $ENCODED_KEYSTORE | base64 -di > "${HOME}"/fhircore.keystore.jks
+      env:
+        ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_FILE }}   
+
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -51,8 +57,20 @@ jobs:
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
 
+    - name: Decode & Generate local.properties file
+      run: echo $LOCAL_PROPERTIES | base64 -di > local.properties
+      working-directory: android
+      env:
+        LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }} 
+
+    - name: Decode & Generate keystore.properties file
+      run: echo $KEYSTORE_PROPERTIES | base64 -di > keystore.properties
+      working-directory: android
+      env:
+        KEYSTORE_PROPERTIES: ${{ secrets.KEYSTORE_PROPERTIES }
+    
     - name: Build application using script
-      run: ./gradlew :quest:clean && ./gradlew :quest:assembleRelease
+      run: ./gradlew :quest:clean && ./gradlew :quest:assembleQuest
       working-directory: android
 
     - name: Perform CodeQL Analysis
