--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -70,7 +70,7 @@ jobs:
         KEYSTORE_PROPERTIES: ${{ secrets.KEYSTORE_PROPERTIES }}
     
     - name: Build application using script
-      run: ./gradlew :quest:assembleQuestRelease --stacktrace
+      run: ./gradlew :quest:assembleQuestRelease
       working-directory: android
 
     - name: Perform CodeQL Analysis
