--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -632,7 +632,8 @@
             "groupResource": {
               "groupIdentifier": "@{familyLogicalId}",
               "memberResourceType": "Patient",
-              "removeGroup": true
+              "removeGroup": true,
+              "refreshContent": true
             },
             "confirmationDialog": {
               "title": "Remove household",
